--- a/example/book/book.ini
+++ b/example/book/book.ini
@@ -2,6 +2,14 @@
 name=维摩诘的花雨满天
 author=南怀瑾
 toc=2
+publisher=东方出版社
+description=《维摩诘经》包含的议题众多，如生病问题、生死问题、什么是菩提、
+	= 什么是道场、什么是布施、涅槃的真正意义、天花不着于身的奥秘、
+	= 女身不需转成男身即能成佛的原因等等，
+	= 一向是学佛修证者最希望读懂也最应该读懂的一本书。南怀瑾先生以经证经，
+	= 融会儒释道，旁征博引地对这些议题进行了深入的探讨，
+	= 不仅为我们揭示了佛法的真谛，为我们展示了中国传统文化的精髓，
+	= 更为我们描绘了一个“花雨满天”的无限世界。
 
 [split]
 AtLevel=1
